--- a/typotheque-prevert/user/themes/typotheque-prevert/templates/partials/base.html.twig
+++ b/typotheque-prevert/user/themes/typotheque-prevert/templates/partials/base.html.twig
@@ -166,9 +166,8 @@
                 </li>
 
                 <li class="bloc-sans-image-panel-font">
-                    <figure class="sans-image">
-                        {# INTEGRER IMAGE #}
-                    </figure>
+                    <div class="diagonale first"></div>
+                    <div class="diagonale second"></div>
                 </li>
             </ul>
         </div>
