--- a/typotheque-prevert/user/themes/typotheque-prevert/templates/partials/base.html.twig
+++ b/typotheque-prevert/user/themes/typotheque-prevert/templates/partials/base.html.twig
@@ -3,7 +3,7 @@
 <head>
 {% block head %}
     <meta charset="utf-8">
-    <title>8 TYPES | Typothèque</title>
+    <title>TYPOTHEQUEEEEEEEE</title>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     {# <meta name="viewport" content="width=device-width, initial-scale=1"> #}
@@ -70,7 +70,7 @@
             <li>|</li>
             <li><a href="https://dnmade-prevert.fr/" target="_blank">dnmade</a></li>
             <li>|</li>
-            <li><a href="https://gitlab.com/louiseroo/TYPOTHEQUEEEEEEEEs" class="link-typotheque" target="_blank">gitlab</a></li>
+            <li><a href="https://github.com/louiseroo/TYPOTHEQUEEEEEEEE" class="link-typotheque" target="_blank">github</a></li>
             <li>|</li>
             <li class="credits-panel">credits</li>
         </ul>
@@ -80,7 +80,7 @@
         
     <div class="infos-panel-description">
         <p>
-            Site web conçu et développé par la&#160;promotion&#160;2021-2024 du&#160;<a href="https://dnmade-prevert.fr" target="_blank">DNMADE Graphisme Augmenté</a> en mars&#160;2023 lors d’un workshop initié par&#160;Romuald&#160;Roudier&#160;Théron et&#160;encadré par&#160;<a href="https://bonjourmonde.net/" target="_blank">Benjamin&#160;Dumont (Bonjour&#160;Monde)</a>.
+            Site web conçu et développé par la&#160;promotion&#160;2021-2024 du&#160;<a href="https://dnmade-prevert.fr" target="_blank">DNMADE Graphisme Augmenté</a> en mars&#160;2023 lors d’un workshop initié par&#160;Romuald&#160;Roudier&#160;Théron et&#160;encadré par&#160;<a href="http://bonjourmonde.net/en" target="_blank">Benjamin&#160;Dumont (Bonjour&#160;Monde)</a>.
             <br><br>
             Site web codé par 
             <a href="https://odilonath.fr/" target="_blank">Odilon&#160;Aouatah</a>, Victor&#160;Facon&#160;&&#160;<a href="https://louiseroo.fr/" target="_blank">Louise Roo</a>
@@ -141,7 +141,7 @@
             <a href="https://www.lucasdescroix.fr/" target="_blank">Lucas&#160;Descroix</a> - 2021<br>
             <a href="https://www.rmfrt.com/" target="_blank">Rémi&#160;Forte</a> - 2022<br>
             <a href="https://www.instagram.com/morgane_pierson/?hl=fr" target="_blank">Morgane&#160;Pierson</a> - 2023<br>
-            <a href="https://bonjourmonde.net/" target="_blank">Benjamin&#160;Dumont</a> - 2024<br><br>
+            <a href="http://bonjourmonde.net/en" target="_blank">Benjamin&#160;Dumont</a> - 2024<br><br>
 
             Les typographies présentées sur&#160;ce&#160;site sont publiées sous licence Open Source, afin d’encourager leur diffusion, réutilisation et&#160;évolution. La&#160;majorité des&#160;caractères sont diffusés sous la&#160;SIL&#160;Open&#160;Font&#160;License&#160;(OFL) ou&#160;des&#160;licences Creative&#160;Commons compatibles. Les&#160;fichiers fontes et&#160;les&#160;spécimens sont disponibles sur&#160;le&#160;GitLab.
 
